--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "start": "node src",
+    "start:dev" : "nodemon --watch src/ src/index.js"
+  }
 }
